[gd_scene load_steps=72 format=2]

[ext_resource path="res://Sprites/Boss/Night-Borne/hit/tile002.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Boss/Night-Borne/hit/tile003.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Boss/Night-Borne/hit/tile004.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile004.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile006.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile002.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile009.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile011.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile013.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile015.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile008.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile016.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile005.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile018.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile019.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile000.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile001.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile002.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile004.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile020.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile003.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile021.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile010.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile008.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile017.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile005.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile006.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile007.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile004.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile014.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile003.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile012.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile002.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile022.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile006.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile000.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile001.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile007.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile009.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile007.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Boss/Night-Borne/idle/tile003.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile000.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile001.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile010.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile008.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Boss/Night-Borne/attack/tile011.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile000.png" type="Texture" id=47]
[ext_resource path="res://Scenes/Boss/NightBorne/NightBorne.gd" type="Script" id=48]
[ext_resource path="res://Sprites/Boss/Night-Borne/death/tile005.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile001.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Boss/Night-Borne/hit/tile000.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Boss/Night-Borne/hit/tile001.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile005.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile004.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile002.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Boss/Night-Borne/run/tile003.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Boss/Night-Borne/ranged-attack/tile011.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Boss/Night-Borne/ranged-attack/tile009.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Boss/Night-Borne/ranged-attack/tile010.png" type="Texture" id=59]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.4448, 14.3988 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6828, 25.0851 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.3146, 25.2603 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.2652, 12.6374 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 41 ), ExtResource( 29 ), ExtResource( 13 ), ExtResource( 27 ), ExtResource( 40 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 37 ), ExtResource( 6 ), ExtResource( 31 ), ExtResource( 19 ), ExtResource( 49 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 7 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 32 ), ExtResource( 9 ), ExtResource( 30 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 34 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 1 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 1 ), ExtResource( 16 ) ],
"loop": true,
"name": "teleport",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 33 ), ExtResource( 21 ), ExtResource( 4 ), ExtResource( 26 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 46 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 50 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 53 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.45, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.45, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../../Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../../CollisionBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=7]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../CollisionBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../../Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "hit"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hit" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../../CollisionBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=9]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../CollisionBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../../Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "teleport"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "teleport" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../../Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../../CollisionBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitArea/HitCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../HitDamageArea/HitDamageCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../CollisionBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../HurtArea/HurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4.4936, 6.61385 )

[node name="NightBorneEnemy" type="KinematicBody2D"]
script = ExtResource( 48 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 1, 9 )
shape = SubResource( 1 )

[node name="Timers" type="Node2D" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="Body" type="Node2D" parent="."]

[node name="HitDamageArea" type="Area2D" parent="Body"]

[node name="HitDamageCollisionShape" type="CollisionShape2D" parent="Body/HitDamageArea"]
position = Vector2( 26, 0 )
shape = SubResource( 2 )
disabled = true

[node name="HitArea" type="Area2D" parent="Body"]
z_as_relative = false

[node name="HitCollisionShape" type="CollisionShape2D" parent="Body/HitArea"]
position = Vector2( 26.189, -0.2973 )
z_as_relative = false
shape = SubResource( 3 )
disabled = true

[node name="HurtArea" type="Area2D" parent="Body"]

[node name="HurtBox" type="CollisionShape2D" parent="Body/HurtArea"]
position = Vector2( 1, 8 )
shape = SubResource( 4 )

[node name="Animation" type="Node2D" parent="Body"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body/Animation"]
frames = SubResource( 5 )
animation = "hit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/Animation"]
root_node = NodePath("../AnimatedSprite")
anims/attack = SubResource( 6 )
anims/death = SubResource( 7 )
anims/hit = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/teleport = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.795494, 7.51301 )
shape = SubResource( 12 )

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Body/HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="area_entered" from="Body/HurtArea" to="." method="_on_HurtArea_area_entered"]
[connection signal="animation_finished" from="Body/Animation/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
